[gd_scene load_steps=5 format=3 uid="uid://ceo4422vseqbl"]

[ext_resource type="Texture2D" uid="uid://qojfuvnnicf2" path="res://assets/Drill.png" id="1_tcqrl"]
[ext_resource type="Script" path="res://scripts/Buildings/Drill.gd" id="1_umnh3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ypuju"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tcqrl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjs8b"]
size = Vector2(146, 147)

[node name="Drill" type="Area2D" groups=["Buildings", "Drills"]]
script = ExtResource("1_umnh3")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ypuju")

[node name="ReleaseOre" type="Timer" parent="."]
process_callback = 0

[node name="OreCounter" type="RichTextLabel" parent="."]
offset_left = -20.0
offset_top = -68.0
offset_right = 13.0
offset_bottom = -47.0
bbcode_enabled = true
scroll_active = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="DetectionArea" type="CollisionShape2D" parent="."]
position = Vector2(0, 11.5)
shape = SubResource("RectangleShape2D_rjs8b")

[connection signal="timeout" from="ReleaseOre" to="." method="_on_release_ore_timeout"]
